--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 Flask==3.0.0
 flask-cors==4.0.0
 Werkzeug==3.0.1
+
+gunicorn==21.2.0
+requests==2.31.0
+Pillow==10.2.0
+google-generativeai==0.5.4
+
 pandas==2.2.0
 openpyxl==3.1.2
-
-Flask
-gunicorn
-requests
-pillow
-google-generativeai
-python-3.11.9
+python-dotenv==1.0.1
